--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 </main>
 
 <footer id="contacto">
-    <p>&copy; 2025 Voicebank Vocaloid6 | Creado con amor por Alejandro</p>
-    <p>Contáctanos: <a href="mailto:info@voicebankvocaloid6.com">info@voicebankvocaloid6.com</a></p>
+    <p>&copy; 2025 Hiroshi Co. | Creado con amor por Alejandro</p>
+    <p>Contáctanos: <a href="m">alejandrotocaboca2015@gmail.com</a></p>
 </footer>
 
 </body>
