--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     <h1>Bienvenido a Hiroshi Co.</h1>
     <p>Explora y descarga nuestros voicebanks exclusivos</p>
     <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#voicebanks">Nuestros Voicebanks</a>
-        <a href="#contacto">Contáctanos</a>
-    </nav>
+    <a href="inicio.html">Inicio</a>
+    <a href="voicebanks.html">Nuestros Voicebanks</a>
+    <a href="contactenos.html">Contáctenos</a>
+</nav>
 </header>
 
 <main>
