--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hiroshi Co.</title>
+    <title>Hiroshi Co. - Inicio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -12,27 +12,21 @@
             background-color: #ffe5ec; /* Fondo rosa claro */
         }
         header {
-            background-color: #ff6fa9; /* Rosa vibrante */
+            background-color: #ff6fa9;
             color: white;
             padding: 20px;
             text-align: center;
-            position: relative;
-        }
-        nav {
-            position: absolute;
-            top: 20px;
-            right: 20px;
         }
         nav a {
             color: white;
             text-decoration: none;
-            margin: 0 10px;
+            margin: 0 15px;
             font-weight: bold;
         }
         nav a:hover {
             text-decoration: underline;
         }
-        section {
+        main {
             margin: 20px;
             padding: 20px;
             background: white;
@@ -42,54 +36,31 @@
         footer {
             text-align: center;
             padding: 10px;
-            background-color: #ff6fa9; /* Rosa vibrante */
+            background-color: #ff6fa9;
             color: white;
             position: fixed;
             bottom: 0;
             width: 100%;
         }
-        .vocaloid-card {
-            border: 1px solid #ff6fa9; /* Borde rosa vibrante */
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            background-color: #fff0f5; /* Fondo rosa claro */
-        }
     </style>
 </head>
 <body>
-
-<header>
-    <h1>Bienvenido a Hiroshi Co.</h1>
-    <p>Explora y descarga nuestros voicebanks exclusivos</p>
-    <nav>
-        <a href="inicio.html">Inicio</a>
-        <a href="voicebanks.html">Nuestros Voicebanks</a>
-        <a href="contactenos.html">Contáctenos</a>
-    </nav>
-</header>
-
-<main>
-    <section id="voicebanks">
-        <h2>Nuestros Voicebanks</h2>
-        <div class="vocaloid-card">
-            <h3>Nombre del Vocaloid</h3>
-            <p>Descripción breve del voicebank.</p>
-            <audio controls>
-                <source src="demo.mp3" type="audio/mpeg">
-                Tu navegador no soporta la reproducción de audio.
-            </audio>
-            <br>
-            <a href="descarga.zip" download>Descargar</a>
-        </div>
-        <!-- Duplica esta sección por cada Vocaloid nuevo -->
-    </section>
-</main>
-
-<footer id="contacto">
-    <p>&copy; 2025 Hiroshi Co. | Creado con amor por Alejandro</p>
-    <p>Contáctanos: <a href="m">alejandrotocaboca2015@gmail.com</a></p>
-</footer>
-
+    <header>
+        <h1>Hiroshi Co.</h1>
+        <p>Tu portal para descargar y disfrutar de nuestros voicebanks exclusivos</p>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="voicebanks.html">Nuestros Voicebanks</a>
+            <a href="contactenos.html">Contáctenos</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Bienvenido a Hiroshi Co.</h2>
+        <p>Descubre nuestra colección de voicebanks exclusivos y empieza a crear música como nunca antes.</p>
+        <p>Hiroshi Co. es un proyecto apasionado que ofrece contenido único diseñado especialmente para los fans de Vocaloid6.</p>
+    </main>
+    <footer>
+        <p>&copy; 2025 Hiroshi Co. | Creado por Alejandro</p>
+    </footer>
 </body>
 </html>
