--- a/voicebanks.html
+++ b/voicebanks.html
@@ -57,7 +57,7 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="voicebanks.html">Nuestros Voicebanks</a>
-            <a href="contactanos.html">Contáctenos</a>
+            <a href="contactenos.html">Contáctenos</a>
         </nav>
     </header>
     <section>
