--- a/contactenos.html
+++ b/contactenos.html
@@ -71,7 +71,7 @@
     <main>
         <h2>Contáctenos</h2>
         <p>Estamos aquí para ayudarte con tus dudas o sugerencias.</p>
-        <form action="alejandrotocaboca2015@gmail.com" method="post" enctype="text/plain">
+        <form action="mailto:alejandrotocaboca2015@gmail.com" method="post" enctype="text/plain">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
             <label for="email">Correo Electrónico:</label>
