--- a/contactenos.html
+++ b/contactenos.html
@@ -33,19 +33,17 @@
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        form input, form textarea, form button {
-            margin: 10px 0;
-            padding: 10px;
-            border: 1px solid #ff6fa9;
-            border-radius: 5px;
-        }
-        form button {
-            background-color: #ff6fa9;
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
             color: white;
-            cursor: pointer;
+            background-color: #ff6fa9;
             border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
-        form button:hover {
+        button:hover {
             background-color: #ff4d88;
         }
         footer {
@@ -70,16 +68,10 @@
     </header>
     <main>
         <h2>Contáctenos</h2>
-        <p>Estamos aquí para ayudarte con tus dudas o sugerencias.</p>
-        <form action="mailto:alejandrotocaboca2015@gmail.com" method="post" enctype="text/plain">
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
-            <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required>
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí" required></textarea>
-            <button type="submit">Enviar</button>
-        </form>
+        <p>Envíanos un correo con un solo clic:</p>
+        <button onclick="window.location.href='https://mail.google.com/mail/?view=cm&fs=1&to=alejandrotocaboca2015@gmail.com';">
+            Enviar correo
+        </button>
     </main>
     <footer>
         <p>&copy; 2025 Hiroshi Co. | Creado por Alejandro</p>
