--- a/voicebanks.html
+++ b/voicebanks.html
@@ -81,19 +81,13 @@
             <h2>Nuestros Voicebanks</h2>
             <p>Descubre y descarga nuestros voicebanks directamente desde GitHub.</p>
             <div class="vocaloid-card">
-                <h3>Voicebank 1</h3>
-                <p>Descripción breve del voicebank 1.</p>
+                <h3>Hiroshi (pack de normal y AI para OpenUTAU)</h3>
+                <p>Fue basado en Raine Reizo, por eso suena igual.</p>
                 <a href="https://github.com/TUUSUARIO/NOMBREDELREPOSITORIO/blob/main/voicebank1.zip" download>
                     <button>Descargar Voicebank 1</button>
                 </a>
             </div>
-            <div class="vocaloid-card">
-                <h3>Voicebank 2</h3>
-                <p>Descripción breve del voicebank 2.</p>
-                <a href="https://github.com/TUUSUARIO/NOMBREDELREPOSITORIO/blob/main/voicebank2.zip" download>
-                    <button>Descargar Voicebank 2</button>
-                </a>
-            </div>
+
         </section>
     </main>
     <footer>
