--- a/voicebanks.html
+++ b/voicebanks.html
@@ -83,7 +83,7 @@
             <div class="vocaloid-card">
                 <h3>Hiroshi (pack de normal y AI para OpenUTAU)</h3>
                 <p>Fue basado en Raine Reizo, por eso suena igual.</p>
-                <a href="https://github.com/TUUSUARIO/NOMBREDELREPOSITORIO/blob/main/voicebank1.zip" download>
+                <a href="https://huggingface.co/hiroshi234elmejor/hiroshipack/blob/main/Hiroshi%20Pack.zip" download>
                     <button>Descargar Voicebank 1</button>
                 </a>
             </div>
